--- a/rallit_scraper/requirements.txt
+++ b/rallit_scraper/requirements.txt
@@ -1,22 +1,27 @@
-aiohttp==3.7.4
-async-timeout==3.0.1
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.2
 attrs==23.1.0
-beautifulsoup4==4.9.3
-boto3==1.28.21
-botocore==1.31.21
+beautifulsoup4==4.12.2
+boto3==1.28.22
+botocore==1.31.22
 certifi==2023.7.22
-chardet==3.0.4
-idna==2.10
+chardet==5.2.0
+charset-normalizer==3.2.0
+frozenlist==1.4.0
+idna==3.4
 jmespath==1.0.1
 multidict==6.0.4
 numpy==1.25.2
-pandas==1.2.4
+pandas==2.0.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
-requests==2.25.1
+requests==2.31.0
 s3transfer==0.6.1
 six==1.16.0
 soupsieve==2.4.1
 typing_extensions==4.7.1
+tzdata==2023.3
 urllib3==1.26.16
 yarl==1.9.2
