--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -47,17 +47,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: SSH and Deploy on EC2
-        uses: appleboy/ssh-action@v0.1.4  # Using a specific version for stability
+        uses: appleboy/ssh-action@master  # Using a specific version for stability
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          password: ${{ secrets.EC2_PASSWORD }}
           port: 22
+          #   key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ubuntu
             chmod 700 .ssh
             chmod 640 .ssh/authorized_keys
-            
+
             cd /home/ubuntu/scraper_server
 
             # Generate the .env file with AWS credentials
@@ -71,3 +72,4 @@ jobs:
             sudo docker-compose down
             sudo docker-compose pull
             sudo docker-compose up -d
+            sudo docker image prune -f
