--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -69,7 +69,7 @@ jobs:
 
             chmod 777 ./Dockerfile
             chmod 777 ./docker-compose.yml
-            sudo docker-compose down
+            sudo docker-compose rm -fsv
             sudo docker-compose pull
             sudo docker-compose up -d
             sudo docker image prune -f
