--- a/scraper_server/docker-compose.yml
+++ b/scraper_server/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
         - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
         - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+        - BUCKET_NAME=${BUCKET_NAME}
         # - POSTGRES_USER=${POSTGRES_USER}
         # - POSTGRES_PW=${POSTGRES_PW}
         # - POSTGRES_HOST=${POSTGRES_HOST}
@@ -23,6 +24,7 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - BUCKET_NAME=${BUCKET_NAME}
       # - POSTGRES_USER=${POSTGRES_USER}
       # - POSTGRES_PW=${POSTGRES_PW}
       # - POSTGRES_HOST=${POSTGRES_HOST}
