--- a/airflow/docker-compose.mac.yaml
+++ b/airflow/docker-compose.mac.yaml
@@ -47,7 +47,9 @@ x-airflow-common:
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.5.1}
-  build: .
+  build: 
+    context: .
+    dockerfile: Dockerfile.mac
   environment:
     &airflow-common-env
     AIRFLOW_VAR_DATA_DIR: /opt/airflow/data
@@ -82,6 +84,59 @@ x-airflow-common:
 
 services:
 
+  spark:
+    image: docker.io/bitnami/spark:3.3
+    environment:
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
+    ports:
+      - '8181:8080'
+      - '7077:7077'
+    networks:
+    - app-tier
+
+  spark-worker-1:
+    image: docker.io/bitnami/spark:3.3
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
+    # ports:
+    #   - '8082:8081'
+    networks:
+    - app-tier
+    depends_on:
+      - spark
+
+  spark-worker-2:
+    image: docker.io/bitnami/spark:3.3
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
+    # ports:
+    #   - '8083:8081'
+    networks:
+    - app-tier
+    depends_on:
+      - spark
+
   spark-jupyter:
     build: ./spark 
     ports:
@@ -89,63 +144,16 @@ services:
       # - "4041:4041"
       - "4040-4080:4040-4080"
       # - "9999:9999"
-      - "7077:7077"
-      - "22:22"
+    environment:
+      - PYSPARK_SUBMIT_ARGS="--master spark://spark:7077 pyspark-shell"
     restart: always
     volumes:
       - ${AIRFLOW_PROJ_DIR:-.}/spark:/home/jovyan
     networks:
     - app-tier
+    depends_on:
+      - spark
 
-# # bitnami/spark:3.3.1
-#   spark:
-#     image: docker.io/bitnami/spark:3.3.1
-#     user: root
-#     environment:
-#       - SPARK_MODE=master
-#       - SPARK_RPC_AUTHENTICATION_ENABLED=no
-#       - SPARK_RPC_ENCRYPTION_ENABLED=no
-#       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-#       - SPARK_SSL_ENABLED=no
-#     ports:
-#       - "7077:7077"
-#       - '8081:8080'
-#     volumes: 
-#       - ./:/app 
-#     networks:
-#       - app-tier
-
-#   spark-worker-1:
-#     image: docker.io/bitnami/spark:3.3.1
-#     user: root
-#     environment:
-#       - SPARK_MODE=worker
-#       - SPARK_MASTER_URL=spark://spark:7077
-#       - SPARK_WORKER_MEMORY=1G
-#       - SPARK_WORKER_CORES=1
-#       - SPARK_RPC_AUTHENTICATION_ENABLED=no
-#       - SPARK_RPC_ENCRYPTION_ENABLED=no
-#       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-#       - SPARK_SSL_ENABLED=no
-
-#     networks:
-#       - app-tier
-
-#   spark-worker-2:
-#     image: docker.io/bitnami/spark:3.3.1
-#     user: root
-#     environment:
-#       - SPARK_MODE=worker
-#       - SPARK_MASTER_URL=spark://spark:7077
-#       - SPARK_WORKER_MEMORY=1G
-#       - SPARK_WORKER_CORES=1
-#       - SPARK_RPC_AUTHENTICATION_ENABLED=no
-#       - SPARK_RPC_ENCRYPTION_ENABLED=no
-#       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-#       - SPARK_SSL_ENABLED=no
-
-#     networks:
-#       - app-tier
 
   postgres:
     image: postgres:13
@@ -359,7 +367,6 @@ services:
 
 volumes:
   postgres-db-volume:
-
 
 networks:
   app-tier:
