--- a/airflow/docker-compose.ubuntu.yaml
+++ b/airflow/docker-compose.ubuntu.yaml
@@ -47,7 +47,9 @@ x-airflow-common:
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.5.1}
-  build: .
+  build:
+    context: .
+    dockerfile: Dockerfile.ubuntu
   environment:
     &airflow-common-env
     AIRFLOW_VAR_DATA_DIR: /opt/airflow/data
