--- a/airflow/docker-compose.mac.yaml
+++ b/airflow/docker-compose.mac.yaml
@@ -82,10 +82,43 @@ x-airflow-common:
     postgres:
       condition: service_healthy
 
+
 services:
 
+  # spark:
+  #   image: bde2020/spark-master:3.3.0-hadoop3.3
+  #   container_name: spark
+  #   ports:
+  #     - "8181:8080"
+  #     - "7077:7077"
+  #   environment:
+  #     - INIT_DAEMON_STEP=setup_spark
+
+  # spark-worker-1:
+  #   image: bde2020/spark-master:3.3.0-hadoop3.3
+  #   container_name: spark-worker-1
+  #   depends_on:
+  #     - spark
+  #   ports:
+  #     - "8082:8081"
+  #   environment:
+  #     - "SPARK_MASTER=spark://spark:7077"
+
+  # spark-worker-2:
+  #   image: bde2020/spark-master:3.3.0-hadoop3.3
+  #   container_name: spark-worker-2
+  #   depends_on:
+  #     - spark
+  #   ports:
+  #     - "8083:8081"
+  #   environment:
+  #     - "SPARK_MASTER=spark://spark:7077"
+
+
   spark:
-    image: docker.io/bitnami/spark:3.3
+    build: 
+      context: ./spark
+      dockerfile: Dockerfile.cluster
     environment:
       - SPARK_MODE=master
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
@@ -96,11 +129,14 @@ services:
     ports:
       - '8181:8080'
       - '7077:7077'
+      - "4040-4045:4040-4045"
     networks:
     - app-tier
 
   spark-worker-1:
-    image: docker.io/bitnami/spark:3.3
+    build: 
+      context: ./spark
+      dockerfile: Dockerfile.cluster
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
@@ -119,7 +155,9 @@ services:
       - spark
 
   spark-worker-2:
-    image: docker.io/bitnami/spark:3.3
+    build: 
+      context: ./spark
+      dockerfile: Dockerfile.cluster
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
@@ -138,13 +176,19 @@ services:
       - spark
 
   spark-jupyter:
-    build: ./spark 
+    build: 
+      context: ./spark
+      dockerfile: Dockerfile.jupyter
     ports:
       - "8888:8888"
       # - "4041:4041"
-      - "4040-4080:4040-4080"
+      # - "4040-4080:4040-4080"
       # - "9999:9999"
     environment:
+      - PYSPARK_PYTHON=/usr/bin/python3
+      - PYSPARK_DRIVER_PYTHON=ipython
+      - PYSPARK_DRIVER_PYTHON_OPTS=notebook
+      - MASTER=spark://spark:7077
       - PYSPARK_SUBMIT_ARGS="--master spark://spark:7077 pyspark-shell"
     restart: always
     volumes:
@@ -153,6 +197,24 @@ services:
     - app-tier
     depends_on:
       - spark
+
+  # zeppelin:
+  #   image: apache/zeppelin:0.10.1
+  #   environment:
+  #     - ZEPPELIN_NOTEBOOK_DIR=/notebook
+  #     - ZEPPELIN_INTERPRETER_DEP_MVNREPO=https://repo1.maven.org/maven2/
+  #     - MASTER=spark://spark:7077
+  #     - ZEPPELIN_WEBSOCKET_MAX_TEXT_MESSAGE_SIZE=1048576
+  #     - SPARK_HOME=/spark
+  #     - SPARK_SUBMIT_OPTIONS="--packages org.apache.spark:spark-streaming-kafka-0-10_2.11:2.4.0,org.apache.kafka:kafka-clients:2.0.0"
+  #   ports:
+  #     - '8999:8080'
+  #   volumes:
+  #     - ${AIRFLOW_PROJ_DIR:-.}/spark:/notebook
+  #   networks:
+  #     - app-tier
+  #   depends_on:
+  #     - spark
 
 
   postgres:
