--- a/airflow/spark/Dockerfile.jupyter
+++ b/airflow/spark/Dockerfile.jupyter
@@ -1,7 +1,7 @@
 # 기본 이미지 설정
 # spark-3.3.1-bin-hadoop3/
 # spark 3.3.1, scala 2.12 
-FROM jupyter/all-spark-notebook:spark-3.3.1
+FROM jupyter/all-spark-notebook:spark-3.3.2
 
 # root 사용자로 전환
 USER root
@@ -43,20 +43,20 @@ RUN wget https://downloads.lightbend.com/scala/2.12.14/scala-2.12.14.deb && \
 
 
 # JDBC 드라이버 다운로드
-RUN cd /usr/local/spark-3.3.1-bin-hadoop3/jars && \
-    if [ ! -f redshift-jdbc42-2.1.0.14.jar ]; then \
-        if ! wget -P /usr/local/spark-3.3.1-bin-hadoop3/jars https://s3.amazonaws.com/redshift-downloads/drivers/jdbc/2.1.0.14/redshift-jdbc42-2.1.0.14.jar; then \
-            echo "Failed to download Redshift JDBC driver"; \
-        fi \
-    else \
-        echo "Redshift JDBC driver already exists"; \
-    fi
+# RUN cd /usr/local/spark-3.3.1-bin-hadoop3/jars && \
+#     if [ ! -f redshift-jdbc42-2.1.0.14.jar ]; then \
+#         if ! wget -P /usr/local/spark-3.3.1-bin-hadoop3/jars https://s3.amazonaws.com/redshift-downloads/drivers/jdbc/2.1.0.14/redshift-jdbc42-2.1.0.14.jar; then \
+#             echo "Failed to download Redshift JDBC driver"; \
+#         fi \
+#     else \
+#         echo "Redshift JDBC driver already exists"; \
+#     fi
 
-# jars 디렉토리의 소유권을 jovyan에게 변경
-RUN chown -R jovyan:jovyan /usr/local/spark-3.3.1-bin-hadoop3/jars
+# # jars 디렉토리의 소유권을 jovyan에게 변경
+# RUN chown -R jovyan:jovyan /usr/local/spark-3.3.1-bin-hadoop3/jars
 
 # Python 패키지 설치
-RUN pip install --no-cache-dir spylon-kernel py4j==0.10.9.5 && \
+RUN pip install --no-cache-dir spylon-kernel py4j==0.10.9.5 python-dotenv boto3 && \
     python -m spylon_kernel install
 
 
