--- a/airflow/docker-compose.mac.yaml
+++ b/airflow/docker-compose.mac.yaml
@@ -85,36 +85,6 @@ x-airflow-common:
 
 services:
 
-  # spark:
-  #   image: bde2020/spark-master:3.3.0-hadoop3.3
-  #   container_name: spark
-  #   ports:
-  #     - "8181:8080"
-  #     - "7077:7077"
-  #   environment:
-  #     - INIT_DAEMON_STEP=setup_spark
-
-  # spark-worker-1:
-  #   image: bde2020/spark-master:3.3.0-hadoop3.3
-  #   container_name: spark-worker-1
-  #   depends_on:
-  #     - spark
-  #   ports:
-  #     - "8082:8081"
-  #   environment:
-  #     - "SPARK_MASTER=spark://spark:7077"
-
-  # spark-worker-2:
-  #   image: bde2020/spark-master:3.3.0-hadoop3.3
-  #   container_name: spark-worker-2
-  #   depends_on:
-  #     - spark
-  #   ports:
-  #     - "8083:8081"
-  #   environment:
-  #     - "SPARK_MASTER=spark://spark:7077"
-
-
   spark:
     build: 
       context: ./spark
@@ -130,6 +100,8 @@ services:
       - '8181:8080'
       - '7077:7077'
       - "4040-4045:4040-4045"
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
     networks:
     - app-tier
 
@@ -149,6 +121,8 @@ services:
       - SPARK_USER=spark
     # ports:
     #   - '8082:8081'
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
     networks:
     - app-tier
     depends_on:
@@ -170,6 +144,8 @@ services:
       - SPARK_USER=spark
     # ports:
     #   - '8083:8081'
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
     networks:
     - app-tier
     depends_on:
