--- a/airflow/docker-compose.ubuntu.yaml
+++ b/airflow/docker-compose.ubuntu.yaml
@@ -99,6 +99,8 @@ services:
       - '8181:8080'
       - '7077:7077'
       - "4040-4045:4040-4045"
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
     networks:
     - app-tier
 
@@ -118,6 +120,8 @@ services:
       - SPARK_USER=spark
     # ports:
     #   - '8082:8081'
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
     networks:
     - app-tier
     depends_on:
@@ -139,6 +143,8 @@ services:
       - SPARK_USER=spark
     # ports:
     #   - '8083:8081'
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
     networks:
     - app-tier
     depends_on:
@@ -151,6 +157,7 @@ services:
     ports:
       - "8888:8888"
       # - "4041:4041"
+      # - "4040-4080:4040-4080"
       # - "9999:9999"
     environment:
       - PYSPARK_PYTHON=/usr/bin/python3
