--- a/scraper_server/requirements.txt
+++ b/scraper_server/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.5.0
 anyio==3.7.1
 async-timeout==4.0.2
 attrs==23.1.0
+awscli==1.29.28
 beautifulsoup4==4.12.2
 boto3==1.28.22
 botocore==1.31.22
