--- a/airflow/docker-compose.mac.yaml
+++ b/airflow/docker-compose.mac.yaml
@@ -47,7 +47,7 @@ x-airflow-common:
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.5.1}
-  build: 
+  build:
     context: .
     dockerfile: Dockerfile.mac
   environment:
@@ -59,7 +59,7 @@ x-airflow-common:
     AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-    
+
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
@@ -85,94 +85,94 @@ x-airflow-common:
 
 services:
 
-  spark:
-    build: 
-      context: ./spark
-      dockerfile: Dockerfile.cluster
-    environment:
-      - SPARK_MODE=master
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
-    ports:
-      - '8181:8080'
-      - '7077:7077'
-      - "4040-4045:4040-4045"
-    volumes:
-      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
-    networks:
-    - app-tier
+  # spark:
+  #   build:
+  #     context: ./spark
+  #     dockerfile: Dockerfile.cluster
+  #   environment:
+  #     - SPARK_MODE=master
+  #     - SPARK_RPC_AUTHENTICATION_ENABLED=no
+  #     - SPARK_RPC_ENCRYPTION_ENABLED=no
+  #     - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+  #     - SPARK_SSL_ENABLED=no
+  #     - SPARK_USER=spark
+  #   ports:
+  #     - '8181:8080'
+  #     - '7077:7077'
+  #     - "4040-4045:4040-4045"
+  #   volumes:
+  #     - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
+  #   networks:
+  #   - app-tier
 
-  spark-worker-1:
-    build: 
-      context: ./spark
-      dockerfile: Dockerfile.cluster
-    environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark:7077
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_WORKER_CORES=1
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
-    # ports:
-    #   - '8082:8081'
-    volumes:
-      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
-    networks:
-    - app-tier
-    depends_on:
-      - spark
+  # spark-worker-1:
+  #   build:
+  #     context: ./spark
+  #     dockerfile: Dockerfile.cluster
+  #   environment:
+  #     - SPARK_MODE=worker
+  #     - SPARK_MASTER_URL=spark://spark:7077
+  #     - SPARK_WORKER_MEMORY=1G
+  #     - SPARK_WORKER_CORES=1
+  #     - SPARK_RPC_AUTHENTICATION_ENABLED=no
+  #     - SPARK_RPC_ENCRYPTION_ENABLED=no
+  #     - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+  #     - SPARK_SSL_ENABLED=no
+  #     - SPARK_USER=spark
+  #   # ports:
+  #   #   - '8082:8081'
+  #   volumes:
+  #     - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
+  #   networks:
+  #   - app-tier
+  #   depends_on:
+  #     - spark
 
-  spark-worker-2:
-    build: 
-      context: ./spark
-      dockerfile: Dockerfile.cluster
-    environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark:7077
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_WORKER_CORES=1
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
-    # ports:
-    #   - '8083:8081'
-    volumes:
-      - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
-    networks:
-    - app-tier
-    depends_on:
-      - spark
+  # spark-worker-2:
+  #   build:
+  #     context: ./spark
+  #     dockerfile: Dockerfile.cluster
+  #   environment:
+  #     - SPARK_MODE=worker
+  #     - SPARK_MASTER_URL=spark://spark:7077
+  #     - SPARK_WORKER_MEMORY=1G
+  #     - SPARK_WORKER_CORES=1
+  #     - SPARK_RPC_AUTHENTICATION_ENABLED=no
+  #     - SPARK_RPC_ENCRYPTION_ENABLED=no
+  #     - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+  #     - SPARK_SSL_ENABLED=no
+  #     - SPARK_USER=spark
+  #   # ports:
+  #   #   - '8083:8081'
+  #   volumes:
+  #     - ${AIRFLOW_PROJ_DIR:-.}/spark:/opt/bitnami/spark/work-dir
+  #   networks:
+  #   - app-tier
+  #   depends_on:
+  #     - spark
 
-  spark-jupyter:
-    build: 
-      context: ./spark
-      dockerfile: Dockerfile.jupyter
-    ports:
-      - "8888:8888"
-      # - "4041:4041"
-      # - "4040-4080:4040-4080"
-      # - "9999:9999"
-    environment:
-      - PYSPARK_PYTHON=/usr/bin/python3
-      - PYSPARK_DRIVER_PYTHON=ipython
-      - PYSPARK_DRIVER_PYTHON_OPTS=notebook
-      - MASTER=spark://spark:7077
-      - PYSPARK_SUBMIT_ARGS="--master spark://spark:7077 pyspark-shell"
-    restart: always
-    volumes:
-      - ${AIRFLOW_PROJ_DIR:-.}/spark:/home/jovyan
-    networks:
-    - app-tier
-    depends_on:
-      - spark
+  # spark-jupyter:
+  #   build:
+  #     context: ./spark
+  #     dockerfile: Dockerfile.jupyter
+  #   ports:
+  #     - "8888:8888"
+  #     # - "4041:4041"
+  #     # - "4040-4080:4040-4080"
+  #     # - "9999:9999"
+  #   environment:
+  #     - PYSPARK_PYTHON=/usr/bin/python3
+  #     - PYSPARK_DRIVER_PYTHON=ipython
+  #     - PYSPARK_DRIVER_PYTHON_OPTS=notebook
+  #     - MASTER=spark://spark:7077
+  #     - PYSPARK_SUBMIT_ARGS="--master spark://spark:7077 pyspark-shell"
+  #   restart: always
+  #   volumes:
+  #     - ${AIRFLOW_PROJ_DIR:-.}/spark:/home/jovyan
+  #   networks:
+  #   - app-tier
+  #   depends_on:
+  #     - spark
 
   # zeppelin:
   #   image: apache/zeppelin:0.10.1
@@ -239,7 +239,7 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-      
+
 
   airflow-scheduler:
     <<: *airflow-common
