--- a/scraper_server/docker-compose.yml
+++ b/scraper_server/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
-      args:
-        - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-        - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-        - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
-        - BUCKET_NAME=${BUCKET_NAME}
+      # args:
+        # - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+        # - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+        # - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+        # - BUCKET_NAME=${BUCKET_NAME}
         # - POSTGRES_USER=${POSTGRES_USER}
         # - POSTGRES_PW=${POSTGRES_PW}
         # - POSTGRES_HOST=${POSTGRES_HOST}
@@ -20,11 +20,11 @@ services:
       - .:/app
     ports:
       - 8000:8000
-    environment:
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
-      - BUCKET_NAME=${BUCKET_NAME}
+    # environment:
+      # - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      # - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      # - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      # - BUCKET_NAME=${BUCKET_NAME}
       # - POSTGRES_USER=${POSTGRES_USER}
       # - POSTGRES_PW=${POSTGRES_PW}
       # - POSTGRES_HOST=${POSTGRES_HOST}
