--- a/scraper_server/Dockerfile
+++ b/scraper_server/Dockerfile
@@ -6,15 +6,15 @@ RUN useradd -r -s /bin/bash jd_scraper
 ENV FastAPI_ENV=production
 
 # set argument vars in docker-run command
-ARG AWS_ACCESS_KEY_ID
-ARG AWS_SECRET_ACCESS_KEY
-ARG AWS_DEFAULT_REGION
-ARG BUCKET_NAME
+# ARG AWS_ACCESS_KEY_ID
+# ARG AWS_SECRET_ACCESS_KEY
+# ARG AWS_DEFAULT_REGION
+# ARG BUCKET_NAME
 
-ENV AWS_ACCESS_KEY_ID $AWS_ACCESS_KEY_ID
-ENV AWS_SECRET_ACCESS_KEY $AWS_SECRET_ACCESS_KEY
-ENV AWS_DEFAULT_REGION $AWS_DEFAULT_REGION
-ENV BUCKET_NAME $BUCKET_NAME
+# ENV AWS_ACCESS_KEY_ID $AWS_ACCESS_KEY_ID
+# ENV AWS_SECRET_ACCESS_KEY $AWS_SECRET_ACCESS_KEY
+# ENV AWS_DEFAULT_REGION $AWS_DEFAULT_REGION
+# ENV BUCKET_NAME $BUCKET_NAME
 
 # Set a directory for the app
 WORKDIR /app
