--- a/airflow/docker-compose.ubuntu.yaml
+++ b/airflow/docker-compose.ubuntu.yaml
@@ -53,6 +53,11 @@ x-airflow-common:
   environment:
     &airflow-common-env
     AIRFLOW_VAR_DATA_DIR: /opt/airflow/data
+    AIRFLOW_VAR_LOG_DIR: /opt/airflow/logs
+    AIRFLOW_VAR_PLUGINS_DIR: /opt/airflow/plugins
+    AIRFLOW_VAR_DAGS_DIR: /opt/airflow/dags
+    AIRFLOW_VAR_DAGS_SQL_DIR: /opt/airflow/dags/sqls
+
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     # For backward compatibility, with Airflow <2.3
