--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r scraper_server/requirements.txt
+          pip install pytest-cov  # <- pytest-cov 설치 추가
+
+      # Prepare for Coverage Report
+      - name: Create Coverage Report Directory
+        run: mkdir -p htmlcov
 
       # Run Tests
       - name: Test Code
@@ -36,7 +41,7 @@ jobs:
         run: |
           pytest --cov=your_package --cov-report html:htmlcov
 
-          
+
       # Zip and Upload Coverage Report as an Artifact
       - name: Zip Coverage Report
         run: zip -r report.zip htmlcov/
