--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: TEST
 
 on:
   push:
-    branches: [ feat/add-hajun2 ]
+    branches: [ main ]
   workflow_dispatch:
 
 env:
@@ -28,7 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r scraper_server/requirements.txt
-          pip install pytest-cov  # <- pytest-cov 설치 추가
+          pip install pytest-cov  
 
       # Prepare for Coverage Report
       - name: Create Coverage Report Directory
