--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,15 +1,15 @@
 name: Continuous Integration and Deployment
 
-# push:
-#   branches: [ main ]
-# workflow_dispatch:
-# branches: [ feat/add-hajun2 ]
-
 on:
-  workflow_run:
-    workflows: ["TEST"]
-    types:
-      - completed
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+    
+# on:
+#   workflow_run:
+#     workflows: ["TEST"]
+#     types:
+#       - completed
  
 jobs:
   
