--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
-    
 # on:
 #   workflow_run:
 #     workflows: ["TEST"]
@@ -77,6 +76,7 @@ jobs:
             chmod 700 ./Dockerfile
             chmod 700 ./docker-compose.yml
             sudo docker-compose rm -fsv
-            sudo docker-compose pull
-            sudo docker-compose up -d
+            sudo docker stop $(docker ps -a -q)
+            sudo docker rm $(docker ps -a -q)
+            sudo docker-compose up --build -d
             sudo docker image prune -f
